# MDP: Mega Drive Plugins
# Interface Specification Version 0.1.0

AUTOMAKE_OPTIONS = subdir-objects

# Render plugins
SUBDIRS = render misc

noinst_HEADERS = \
		mdp.h \
		mdp_cpuflags.h \
		mdp_fncall.h \
		mdp_version.h \
		mdp_host.h \
		mdp_render.h \
		mdp_event.h \
		mdp_constants.h \
		mdp_z.h \
		mdp_win32.h \
		mdp_nasm_x86.inc
