# MDP: Mega Drive Plugins
# Interface Specification Version 0.1.0

AUTOMAKE_OPTIONS = subdir-objects

SUBDIRS = mdp_test render misc

noinst_HEADERS = \
		mdp.h \
		mdp_cpuflags.h \
		mdp_fncall.h \
		mdp_version.h \
		mdp_host.h \
		mdp_render.h \
		mdp_event.h \
		mdp_constants.h \
		mdp_z.h \
		mdp_nasm_x86.inc \
		mdp_dlopen.h \
		mdp_mem.h \
		mdp_reg.h
