## Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS = subdir-objects

noinst_LIBRARIES = libz.a
libminizip_a_SOURCES = \
		adler32.c \
		compress.c \
		crc32.c \
		gzio.c \
		uncompr.c \
		deflate.c \
		trees.c \
		zutil.c \
		inflate.c \
		infback.c \
		inftrees.c \
		inffast.c

noinst_HEADERS = \
		crc32.h \
		deflate.h \
		inffast.h \
		inffixed.h \
		inflate.h \
		inftrees.h \
		trees.h \
		zlib.h \
		zutil.h
